--- a/demo.ipynb
+++ b/demo.ipynb
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,6 +269,254 @@
     "                video_filename, start_frame, num_frames - 1, label2id[video_filename])\n",
     "\n",
     "        f.write(annotation_string)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([-0.0346, -0.5498,  0.9742], requires_grad=True)\n",
+      "tensor([0., 0., 0.])\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch.nn as nn \n",
+    "import torch\n",
+    "m = nn.Sigmoid()\n",
+    "loss = nn.BCELoss()\n",
+    "input = torch.randn(3, requires_grad=True)\n",
+    "print(input)\n",
+    "target = torch.empty(3).random_(2)\n",
+    "print(target)\n",
+    "output = loss(m(input), target)\n",
+    "output.backward()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "from typing import Optional, Sequence\n",
+    "\n",
+    "import torch\n",
+    "from torch import Tensor\n",
+    "from torch import nn\n",
+    "from torch.nn import functional as F\n",
+    "\n",
+    "class FocalLoss(nn.Module):\n",
+    "    \"\"\" Focal Loss, as described in https://arxiv.org/abs/1708.02002.\n",
+    "    It is essentially an enhancement to cross entropy loss and is\n",
+    "    useful for classification tasks when there is a large class imbalance.\n",
+    "    x is expected to contain raw, unnormalized scores for each class.\n",
+    "    y is expected to contain class labels.\n",
+    "    Shape:\n",
+    "        - x: (batch_size, C) or (batch_size, C, d1, d2, ..., dK), K > 0.\n",
+    "        - y: (batch_size,) or (batch_size, d1, d2, ..., dK), K > 0.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    def __init__(self,\n",
+    "                 alpha: Optional[Tensor] = None,\n",
+    "                 gamma: float = 0.,\n",
+    "                 reduction: str = 'mean',\n",
+    "                 ignore_index: int = -100):\n",
+    "        \"\"\"Constructor.\n",
+    "        Args:\n",
+    "            alpha (Tensor, optional): Weights for each class. Defaults to None.\n",
+    "            gamma (float, optional): A constant, as described in the paper.\n",
+    "                Defaults to 0.\n",
+    "            reduction (str, optional): 'mean', 'sum' or 'none'.\n",
+    "                Defaults to 'mean'.\n",
+    "            ignore_index (int, optional): class label to ignore.\n",
+    "                Defaults to -100.\n",
+    "        \"\"\"\n",
+    "        if reduction not in ('mean', 'sum', 'none'):\n",
+    "            raise ValueError(\n",
+    "                'Reduction must be one of: \"mean\", \"sum\", \"none\".')\n",
+    "\n",
+    "        super().__init__()\n",
+    "        self.alpha = alpha\n",
+    "        self.gamma = gamma\n",
+    "        self.ignore_index = ignore_index\n",
+    "        self.reduction = reduction\n",
+    "\n",
+    "        self.nll_loss = nn.NLLLoss(\n",
+    "            weight=alpha, reduction='none', ignore_index=ignore_index)\n",
+    "\n",
+    "    def __repr__(self):\n",
+    "        arg_keys = ['alpha', 'gamma', 'ignore_index', 'reduction']\n",
+    "        arg_vals = [self.__dict__[k] for k in arg_keys]\n",
+    "        arg_strs = [f'{k}={v!r}' for k, v in zip(arg_keys, arg_vals)]\n",
+    "        arg_str = ', '.join(arg_strs)\n",
+    "        return f'{type(self).__name__}({arg_str})'\n",
+    "\n",
+    "    def forward(self, x: Tensor, y: Tensor) -> Tensor:\n",
+    "        if x.ndim > 2:\n",
+    "            # (N, C, d1, d2, ..., dK) --> (N * d1 * ... * dK, C)\n",
+    "            c = x.shape[1]\n",
+    "            x = x.permute(0, *range(2, x.ndim), 1).reshape(-1, c)\n",
+    "            # (N, d1, d2, ..., dK) --> (N * d1 * ... * dK,)\n",
+    "            y = y.view(-1)\n",
+    "\n",
+    "        unignored_mask = y != self.ignore_index\n",
+    "        y = y[unignored_mask]\n",
+    "        if len(y) == 0:\n",
+    "            return torch.tensor(0.)\n",
+    "        x = x[unignored_mask]\n",
+    "\n",
+    "        # compute weighted cross entropy term: -alpha * log(pt)\n",
+    "        # (alpha is already part of self.nll_loss)\n",
+    "        log_p = F.log_softmax(x, dim=-1)\n",
+    "        ce = self.nll_loss(log_p, y)\n",
+    "\n",
+    "        # get true class column from each row\n",
+    "        all_rows = torch.arange(len(x))\n",
+    "        log_pt = log_p[all_rows, y]\n",
+    "\n",
+    "        # compute focal term: (1 - pt)^gamma\n",
+    "        pt = log_pt.exp()\n",
+    "        focal_term = (1 - pt)**self.gamma\n",
+    "\n",
+    "        # the full loss: -alpha * ((1 - pt)^gamma) * log(pt)\n",
+    "        loss = focal_term * ce\n",
+    "\n",
+    "        if self.reduction == 'mean':\n",
+    "            loss = loss.mean()\n",
+    "        elif self.reduction == 'sum':\n",
+    "            loss = loss.sum()\n",
+    "\n",
+    "        return loss"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torchvision\n",
+    "import torch.nn as nn \n",
+    "from typing import Optional, Sequence\n",
+    "from torch import Tensor\n",
+    "class FocalLoss(nn.Module):\n",
+    "    def __init__(self, alpha: Optional[Tensor] = 0.25,\n",
+    "                 gamma: float = 2,\n",
+    "                 reduction: str = 'mean',):\n",
+    "        super(FocalLoss, self).__init__()\n",
+    "        self.alpha = alpha\n",
+    "        self.gamma = gamma\n",
+    "        self.reduction = reduction\n",
+    "    def forward(self, x, y):\n",
+    "        loss = torchvision.ops.sigmoid_focal_loss(input, target, alpha=self.alpha, gamma=self.gamma,reduction=self.reduction)\n",
+    "        return loss"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class AsymmetricLossOptimized(nn.Module):\n",
+    "    ''' Notice - optimized version, minimizes memory allocation and gpu uploading,\n",
+    "    favors inplace operations'''\n",
+    "\n",
+    "    def __init__(self, gamma_neg=4, gamma_pos=1, clip=0.05, eps=1e-5, disable_torch_grad_focal_loss=False):\n",
+    "        super(AsymmetricLossOptimized, self).__init__()\n",
+    "\n",
+    "        self.gamma_neg = gamma_neg\n",
+    "        self.gamma_pos = gamma_pos\n",
+    "        self.clip = clip\n",
+    "        self.disable_torch_grad_focal_loss = disable_torch_grad_focal_loss\n",
+    "        self.eps = eps\n",
+    "\n",
+    "        self.targets = self.anti_targets = self.xs_pos = self.xs_neg = self.asymmetric_w = self.loss = None\n",
+    "\n",
+    "    def forward(self, x, y):\n",
+    "        \"\"\"\"\n",
+    "        Parameters\n",
+    "        ----------\n",
+    "        x: input logits\n",
+    "        y: targets (multi-label binarized vector)\n",
+    "        \"\"\"\n",
+    "\n",
+    "        self.targets = y\n",
+    "        self.anti_targets = 1 - y\n",
+    "\n",
+    "        # Calculating Probabilities\n",
+    "        self.xs_pos = torch.sigmoid(x)\n",
+    "        self.xs_neg = 1.0 - self.xs_pos\n",
+    "\n",
+    "        # Asymmetric Clipping\n",
+    "        if self.clip is not None and self.clip > 0:\n",
+    "            self.xs_neg.add_(self.clip).clamp_(max=1)\n",
+    "\n",
+    "        # Basic CE calculation\n",
+    "        self.loss = self.targets * torch.log(self.xs_pos.clamp(min=self.eps))\n",
+    "        self.loss.add_(self.anti_targets *\n",
+    "                       torch.log(self.xs_neg.clamp(min=self.eps)))\n",
+    "\n",
+    "        # Asymmetric Focusing\n",
+    "        if self.gamma_neg > 0 or self.gamma_pos > 0:\n",
+    "            if self.disable_torch_grad_focal_loss:\n",
+    "                with torch.no_grad():\n",
+    "                    # if self.disable_torch_grad_focal_loss:\n",
+    "                    #     torch._C.set_grad_enabled(False)\n",
+    "                    self.xs_pos = self.xs_pos * self.targets\n",
+    "                    self.xs_neg = self.xs_neg * self.anti_targets\n",
+    "                    self.asymmetric_w = torch.pow(1 - self.xs_pos - self.xs_neg,\n",
+    "                                                  self.gamma_pos * self.targets + self.gamma_neg * self.anti_targets)\n",
+    "                    # if self.disable_torch_grad_focal_loss:\n",
+    "                    #     torch._C.set_grad_enabled(True)\n",
+    "                self.loss *= self.asymmetric_w\n",
+    "            else:\n",
+    "                self.xs_pos = self.xs_pos * self.targets\n",
+    "                self.xs_neg = self.xs_neg * self.anti_targets\n",
+    "                self.asymmetric_w = torch.pow(1 - self.xs_pos - self.xs_neg,\n",
+    "                                              self.gamma_pos * self.targets + self.gamma_neg * self.anti_targets)\n",
+    "                self.loss *= self.asymmetric_w\n",
+    "        _loss = - self.loss.sum() / x.size(0)\n",
+    "        _loss = _loss / y.size(1) * 1000\n",
+    "\n",
+    "        return _loss"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[1.],\n",
+      "        [0.],\n",
+      "        [0.],\n",
+      "        [1.]])\n",
+      "tensor(148.8672, grad_fn=<MulBackward0>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torchvision\n",
+    "import torch\n",
+    "input = torch.rand(4,1, requires_grad=True)\n",
+    "target = torch.randint(0, 1, (4,1)).random_(2).type(torch.FloatTensor)\n",
+    "print(target)\n",
+    "loss = AsymmetricLossOptimized()\n",
+    "output = loss(input, target)\n",
+    "output.backward()\n",
+    "print(output)"
    ]
   },
   {
