add model deeppixel

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -500,33 +500,212 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/vietlq4/miniconda3/envs/py37/lib/python3.7/site-packages/torch/nn/functional.py:1639: UserWarning: nn.functional.sigmoid is deprecated. Use torch.sigmoid instead.\n",
+      "  warnings.warn(\"nn.functional.sigmoid is deprecated. Use torch.sigmoid instead.\")\n"
+     ]
+    }
+   ],
    "source": [
-    "input = torch.rand(4,512, requires_grad=True)\n",
-    "target = torch.randint(0, 1, (4,1)).random_(2).type(torch.LongTensor)\n",
-    "loss = AdMSoftmaxLoss(512, 2)\n",
-    "\n",
-    "l = loss(input, target)\n",
-    "l.backward()"
+    "input = torch.rand(4,2, requires_grad=True)\n",
+    "target = torch.randint(0, 1, (4,)).random_(2).type(torch.LongTensor)\n",
+    "feature_input = torch.rand(4,14,14,requires_grad=True)\n",
+    "feature_input = F.sigmoid(feature_input)\n",
+    "feature_target = torch.randint(0, 2, (4,14,14)).random_(1).type(torch.FloatTensor)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor(11.5913, grad_fn=<NegBackward>)\n"
+      "torch.Size([4, 14, 14])\n"
      ]
     }
    ],
    "source": [
-    "print(l)"
+    "print(feature_target.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "l1 = nn.CrossEntropyLoss()\n",
+    "l2 = nn.BCELoss()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "l = l1(input,target) + l2(feature_input,feature_target)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "label = 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "label_map = torch.ones(4, 14, 14)*abs(0.01 - label)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[[0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900,\n",
+       "          0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900],\n",
+       "         [0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900,\n",
+       "          0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900],\n",
+       "         [0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900,\n",
+       "          0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900],\n",
+       "         [0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900,\n",
+       "          0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900],\n",
+       "         [0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900,\n",
+       "          0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900],\n",
+       "         [0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900,\n",
+       "          0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900],\n",
+       "         [0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900,\n",
+       "          0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900],\n",
+       "         [0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900,\n",
+       "          0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900],\n",
+       "         [0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900,\n",
+       "          0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900],\n",
+       "         [0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900,\n",
+       "          0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900],\n",
+       "         [0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900,\n",
+       "          0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900],\n",
+       "         [0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900,\n",
+       "          0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900],\n",
+       "         [0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900,\n",
+       "          0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900],\n",
+       "         [0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900,\n",
+       "          0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900]],\n",
+       "\n",
+       "        [[0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900,\n",
+       "          0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900],\n",
+       "         [0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900,\n",
+       "          0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900],\n",
+       "         [0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900,\n",
+       "          0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900],\n",
+       "         [0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900,\n",
+       "          0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900],\n",
+       "         [0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900,\n",
+       "          0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900],\n",
+       "         [0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900,\n",
+       "          0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900],\n",
+       "         [0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900,\n",
+       "          0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900],\n",
+       "         [0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900,\n",
+       "          0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900],\n",
+       "         [0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900,\n",
+       "          0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900],\n",
+       "         [0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900,\n",
+       "          0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900],\n",
+       "         [0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900,\n",
+       "          0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900],\n",
+       "         [0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900,\n",
+       "          0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900],\n",
+       "         [0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900,\n",
+       "          0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900],\n",
+       "         [0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900,\n",
+       "          0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900]],\n",
+       "\n",
+       "        [[0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900,\n",
+       "          0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900],\n",
+       "         [0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900,\n",
+       "          0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900],\n",
+       "         [0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900,\n",
+       "          0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900],\n",
+       "         [0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900,\n",
+       "          0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900],\n",
+       "         [0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900,\n",
+       "          0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900],\n",
+       "         [0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900,\n",
+       "          0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900],\n",
+       "         [0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900,\n",
+       "          0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900],\n",
+       "         [0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900,\n",
+       "          0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900],\n",
+       "         [0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900,\n",
+       "          0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900],\n",
+       "         [0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900,\n",
+       "          0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900],\n",
+       "         [0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900,\n",
+       "          0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900],\n",
+       "         [0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900,\n",
+       "          0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900],\n",
+       "         [0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900,\n",
+       "          0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900],\n",
+       "         [0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900,\n",
+       "          0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900]],\n",
+       "\n",
+       "        [[0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900,\n",
+       "          0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900],\n",
+       "         [0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900,\n",
+       "          0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900],\n",
+       "         [0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900,\n",
+       "          0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900],\n",
+       "         [0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900,\n",
+       "          0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900],\n",
+       "         [0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900,\n",
+       "          0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900],\n",
+       "         [0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900,\n",
+       "          0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900],\n",
+       "         [0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900,\n",
+       "          0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900],\n",
+       "         [0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900,\n",
+       "          0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900],\n",
+       "         [0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900,\n",
+       "          0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900],\n",
+       "         [0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900,\n",
+       "          0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900],\n",
+       "         [0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900,\n",
+       "          0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900],\n",
+       "         [0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900,\n",
+       "          0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900],\n",
+       "         [0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900,\n",
+       "          0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900],\n",
+       "         [0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900,\n",
+       "          0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900]]])"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "label_map"
    ]
   },
   {
