add predict deeppixel

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -539,6 +539,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "feature_target.size(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 56,
    "metadata": {},
    "outputs": [],
@@ -558,154 +578,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [],
    "source": [
-    "label = 1"
+    "label = torch.ones(4,)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [],
    "source": [
-    "label_map = torch.ones(4, 14, 14)*abs(0.01 - label)"
+    "labels = torch.abs(torch.sub(label, 0.01)).view(-1,1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[[0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900,\n",
-       "          0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900],\n",
-       "         [0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900,\n",
-       "          0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900],\n",
-       "         [0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900,\n",
-       "          0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900],\n",
-       "         [0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900,\n",
-       "          0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900],\n",
-       "         [0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900,\n",
-       "          0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900],\n",
-       "         [0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900,\n",
-       "          0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900],\n",
-       "         [0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900,\n",
-       "          0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900],\n",
-       "         [0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900,\n",
-       "          0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900],\n",
-       "         [0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900,\n",
-       "          0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900],\n",
-       "         [0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900,\n",
-       "          0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900],\n",
-       "         [0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900,\n",
-       "          0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900],\n",
-       "         [0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900,\n",
-       "          0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900],\n",
-       "         [0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900,\n",
-       "          0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900],\n",
-       "         [0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900,\n",
-       "          0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900]],\n",
-       "\n",
-       "        [[0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900,\n",
-       "          0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900],\n",
-       "         [0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900,\n",
-       "          0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900],\n",
-       "         [0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900,\n",
-       "          0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900],\n",
-       "         [0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900,\n",
-       "          0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900],\n",
-       "         [0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900,\n",
-       "          0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900],\n",
-       "         [0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900,\n",
-       "          0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900],\n",
-       "         [0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900,\n",
-       "          0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900],\n",
-       "         [0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900,\n",
-       "          0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900],\n",
-       "         [0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900,\n",
-       "          0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900],\n",
-       "         [0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900,\n",
-       "          0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900],\n",
-       "         [0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900,\n",
-       "          0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900],\n",
-       "         [0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900,\n",
-       "          0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900],\n",
-       "         [0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900,\n",
-       "          0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900],\n",
-       "         [0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900,\n",
-       "          0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900]],\n",
-       "\n",
-       "        [[0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900,\n",
-       "          0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900],\n",
-       "         [0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900,\n",
-       "          0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900],\n",
-       "         [0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900,\n",
-       "          0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900],\n",
-       "         [0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900,\n",
-       "          0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900],\n",
-       "         [0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900,\n",
-       "          0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900],\n",
-       "         [0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900,\n",
-       "          0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900],\n",
-       "         [0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900,\n",
-       "          0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900],\n",
-       "         [0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900,\n",
-       "          0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900],\n",
-       "         [0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900,\n",
-       "          0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900],\n",
-       "         [0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900,\n",
-       "          0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900],\n",
-       "         [0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900,\n",
-       "          0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900],\n",
-       "         [0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900,\n",
-       "          0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900],\n",
-       "         [0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900,\n",
-       "          0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900],\n",
-       "         [0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900,\n",
-       "          0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900]],\n",
-       "\n",
-       "        [[0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900,\n",
-       "          0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900],\n",
-       "         [0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900,\n",
-       "          0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900],\n",
-       "         [0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900,\n",
-       "          0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900],\n",
-       "         [0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900,\n",
-       "          0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900],\n",
-       "         [0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900,\n",
-       "          0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900],\n",
-       "         [0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900,\n",
-       "          0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900],\n",
-       "         [0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900,\n",
-       "          0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900],\n",
-       "         [0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900,\n",
-       "          0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900],\n",
-       "         [0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900,\n",
-       "          0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900],\n",
-       "         [0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900,\n",
-       "          0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900],\n",
-       "         [0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900,\n",
-       "          0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900],\n",
-       "         [0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900,\n",
-       "          0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900],\n",
-       "         [0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900,\n",
-       "          0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900],\n",
-       "         [0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900,\n",
-       "          0.9900, 0.9900, 0.9900, 0.9900, 0.9900, 0.9900]]])"
+       "tensor([[0.9900],\n",
+       "        [0.9900],\n",
+       "        [0.9900],\n",
+       "        [0.9900]])"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 139,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "label_map"
+    "labels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ones = torch.ones(4, 196)\n",
+    "label_map = ones * labels.expand_as(ones)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([4, 196])"
+      ]
+     },
+     "execution_count": 145,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "label_map.size()"
    ]
   },
   {
