add train siamese

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,19 +522,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "torch.Size([4, 14, 14])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(feature_target.shape)"
+    "from utils.loss import *"
    ]
   },
   {
@@ -559,12 +551,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "l1 = nn.CrossEntropyLoss()\n",
-    "l2 = nn.BCELoss()"
+    "l1 = ContrastiveLoss(margin=1.0)"
    ]
   },
   {
@@ -678,7 +669,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13 (default, Oct 18 2022, 18:57:03) \n[GCC 11.2.0]"
+   "version": "3.7.13"
   },
   "orig_nbformat": 4,
   "vscode": {
